--- a/css/style.css
+++ b/css/style.css
@@ -1,133 +1,695 @@
 @import "utility.css";
+@import "fonts.css";
+@import "utility.css";
+@import "swiper.css";
+@import "faq.css";
+@import "res.css";
 
 
 :root {
-    --black: #000000;
-    --black2: #150050;
-    --main: #66fcf1;
-    --black3: #080d19;
-    --white: #fff;
-    --text: #b4b4b4;
-    --max-width: 1200px;
-    --margin: 0px auto;
-    --transition: all 0.3s ease-in-out;
+  --black: #0000;
+  --s-black: #150050;
+  --pink: #66fcf1;
+  --bg-dark: #080d19;
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    color: var(--white);
-    text-align: center;
-    font-family: inter, sans-serif;
-    font-size: 16px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  color: #fff;
+  text-align: center;
+  font-family: inter, sans-serif;
+  font-size: 16px;
+}
+
+a[aria-disabled="true"] {
+  cursor: not-allowed;
 }
 
 html {
-    scroll-behavior: smooth;
-}
-
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
+  scroll-behavior: smooth;
 }
 
 h1 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
-/* home */
-.home {
-    min-height: 500px;
-    height: 100vh;
+h2 {
+  font-size: 2.8rem;
+}
 
+h3 {
+  font-size: 2.5rem;
+}
+
+h4 {
+  font-size: 2.3rem;
+}
+
+h5 {
+  font-size: 2rem;
+}
+
+h6 {
+  font-size: 1.8rem;
+}
+
+.warper>div {
+  max-width: 1200px;
+  margin: auto;
+  width: 92%;
+  padding: 30px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section {
+  min-height: unset !important;
+  height: 900px !important;
+  overflow: hidden;
 }
 
 #particles-js {
-    background-color: var(--black3);
-    display: flex;
-    flex-direction: column;
-    position: relative;
+  background-color: #080d19;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .particles-js-canvas-el {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
 }
 
 .navBar {
-    padding: 0 20px;
-    display: flex;
-    align-items: center;
-    z-index: 20;
-    background-color: transparent;
-    max-width: var(--max-width);
-    width: 95%;
-    margin: var(--margin);
-    justify-content: space-between;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  z-index: 20;
+  background-color: transparent;
+}
+
+.navBar>div {
+  max-width: 1200px;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  cursor: pointer;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navBar>div>div {
+  background-color: #080d19;
 }
 
 .navBar img {
-    height: 60px;
-    mix-blend-mode: lighten;
+  height: 60px;
+  mix-blend-mode: lighten;
 }
 
-#toggleBar {
-    display: none;
-}
-
-
-.menuList {
-    display: flex;
-    gap: 30px;
-    align-items: center;
+#menuList {
+  display: flex;
+  gap: 30px;
+  align-items: center;
 
 }
 
-.menuList li {
-    color: var(--main);
-    font-size: 1rem;
-    font-weight: 600;
-    transition: var(--transition);
-    cursor: pointer;
+#menuList li {
+  color: #fff;
+  font-size: 0.9rem;
+  font-weight: 500;
+  list-style: none;
+  font-family: inter;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+#menuList li:last-child,
+.loginBtn {
+  background-color: transparent;
+  padding: 8px 20px;
+  border: 2px solid var(--pink);
+  border-radius: 6px;
+}
+
+#menuList li:hover,
+.loginBtn:hover {
+  color: var(--pink);
+}
+
+#toggelBar {
+  display: none;
+}
+
+li>a,
+.loginBtn {
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+li>a:active {
+  color: var(--pink);
 }
 
 .main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-width: var(--max-width);
-    margin: var(--margin);
-    width: 95%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 4%;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .hero_heading {
-    margin-bottom: 20px;
+  color: white;
+  font-family: inter;
+  font-size: 3rem;
+  margin-bottom: 20px;
 }
 
 .hero_sub_heading {
-    color: var(--main);
-    font-size: 1.5rem;
-    font-style: oblique;
-    margin-bottom: 50px;
+  color: var(--pink);
+  font-size: 24px;
+  font-family: inter;
+  font-style: oblique;
+  margin-bottom: 50px;
+
 }
 
 .hero_para {
-    color: var(--text);
-    font-size: 1.2rem;
-    margin-bottom: 30px;
-    max-width: calc(var(--max-width)-10vw);
+  color: #9d9d9d;
+  font-size: 1.2rem;
+  font-family: inter;
+  margin-bottom: 30px;
+  max-width: 1400px;
 }
 
-.activeText {
-    font-size: 1.2rem;
+.sectionTwo {
+  display: flex;
+  position: relative;
+  top: -150px;
+  border-radius: 20px;
+  overflow: hidden;
+  gap: 1px;
+  padding: 0px !important;
+  background-color: #b7b6b6;
+}
 
+.sectionTwo>div {
+  background-color: aliceblue;
+  min-height: 300px;
+  height: auto;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 60px 30px;
+}
+
+.warper {
+  max-width: 100vw;
+  width: 100%;
+}
+
+.iconWarper {
+  height: 70px;
+  width: 70px;
+  background-color: var(--s-black);
+  border-radius: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sectionTwo ion-icon {
+  font-size: 1.8rem;
+  color: var(--pink);
+}
+
+.sectionTwo>div>h5 {
+  color: var(--s-black);
+  padding-top: 20px;
+}
+
+.timeLineTitle {
+  color: white;
+  padding: 20px;
+  font-size: 60px;
+  text-align: center;
+  padding-top: 50px;
+  margin-bottom: 0px;
+  text-shadow: 0px 0px 20px rgba(255, 0, 85, 0.486);
+}
+
+.projects {
+  height: auto;
+  background: url("../images/home-stars.png");
+  background-color: #080d19;
+  min-height: 100vh;
+  max-width: 100vw;
+  height: auto;
+  width: 100%;
+  padding: 80px 100px 80px 100px;
+}
+
+.projectList {
+  border: 1px solid rgba(255, 0, 0, 0);
+  padding: 30px;
+  margin: 20px;
+  margin-bottom: 30px;
+  cursor: pointer;
+  transition: all 0.1s ease-in;
+}
+
+.projectList:hover {
+  backdrop-filter: blur(1px);
+  background-color: hsla(96, 46%, 68%, 0.103);
+  border-radius: 10px;
+  border: 0.5px solid gray;
+  box-shadow: 0px 0px 10px 2px hsla(96, 46%, 68%, 0.103);
+}
+
+
+
+
+
+
+#work {
+  padding-bottom: 80px;
+  max-width: 100vw;
+  background: #000;
+  border-top: 1px solid #fff;
+  overflow: hidden;
+  position: relative;
+  z-index: -6;
+}
+
+#bar {
+  display: none;
+}
+
+#work::after {
+  content: "";
+  background-image: url(../images/img1.jpg);
+  background-position: center 0;
+  background-size: cover;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  max-width: 100vw;
+  position: absolute;
+  opacity: 0.5;
+  z-index: -5;
+  background-repeat: no-repeat;
+}
+
+.span {
+  color: #a7d389;
+  font-weight: 800;
+}
+
+.workHeading {
+  z-index: 20;
+  padding: 20px;
+  color: rgb(255, 255, 255);
+  margin-top: 70px;
+  font-size: 60px;
+  font-family: inter;
+  text-align: center;
+  opacity: 1;
+}
+
+.workDis {
+  max-width: 1000px;
+  margin: auto;
+  color: #fff;
+  font-family: inter;
+  text-align: center;
+  font-size: 22px;
+  padding: 0px 20px;
+  margin-top: 30px;
+  word-spacing: 4px;
+}
+
+.work>div {
+  padding: 0px 20px;
+}
+
+.cardCon {
+  display: flex;
+  max-width: 1200px;
+  margin: auto;
+  justify-content: center;
+  gap: 10%;
+  margin-top: 70px;
+  padding: 10px 50px;
+}
+
+.cardBox {
+  /* width: 200px; */
+  background-color: rgb(255, 255, 255);
+  cursor: pointer;
+}
+
+.cardImag {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+
+}
+
+.cardHeading {
+  color: #000000;
+  font-family: inter;
+  text-align: center;
+  font-size: 25px;
+  font-weight: 900;
+  margin-top: 10px;
+
+}
+
+.cardDis {
+  color: #000000;
+  font-family: inter;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px 20px 20px 20px;
+}
+
+.servicesSection {
+  background-color: #e6e6e6;
+  height: auto;
+}
+
+.servicePageTop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 100px;
+}
+
+.serviceLeft {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.servicesHeading {
+  color: #080d19;
+  font-size: 60px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 900;
+  line-height: 40px;
+  text-align: center;
+}
+
+.servicesSubHeading {
+  color: #080d19;
+  font-size: 18px;
+  font-family: lato;
+  display: flex;
+  align-items: center;
+}
+
+.serviceSpan {
+  color: rgb(82, 163, 0);
+  font-size: 25px;
+}
+
+.serviceRight {
+  display: flex;
+  border-radius: 5px;
+  overflow: hidden;
+  gap: 1px;
+}
+
+.slick-track {
+  display: flex !important;
+  gap: 50px;
+}
+
+.slick-list {
+  padding: 0px !important;
+}
+
+.serviceLabel {
+  font-size: 20px;
+  font-family: sans-serif;
+  padding: 12px 20px;
+  background-color: #080d19;
+  cursor: pointer;
+}
+
+.serviceRight input[type="radio"] {
+  display: none;
+}
+
+.serviceRight input[type="radio"]:checked+label {
+  background-color: red;
+}
+
+.serviceCard {
+  width: 100%;
+  /* min-width: 300px; */
+  position: relative;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: #080d19;
+  cursor: pointer;
+  height: auto !important;
+  display: flex;
+  flex-direction: column;
+}
+
+.serviceCard:hover {
+  background-color: #0f1930;
+}
+
+.serviceImage {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+
+  object-fit: cover;
+  flex: 1;
+}
+
+.serviceText {
+  flex: 0.4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 30px 50px;
+
+}
+
+.serviceText h3 {
+  font-family: sans-serif;
+}
+
+.serviceText p {
+  font-family: baloo;
+}
+
+.cardInfo,
+.card {
+  transition: all 0.5s;
+
+}
+
+.card {
+  cursor: pointer;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 2px solid #2a2a2a;
+  position: relative;
+  width: 45%;
+}
+
+.card img {
+  width: 100%
+}
+
+.card:hover {
+  border: 2px solid var(--pink) !important;
+}
+
+.card:hover>.cardInfo {
+  opacity: 1 !important;
+}
+
+.cardInfo {
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  top: 0px;
+  right: 0px;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  padding: 30px;
+  background: linear-gradient(0deg, rgba(0, 0, 0) 0%, rgba(0, 0, 0, .9) 47%, rgba(0, 0, 0, 0.5) 100%);
+  opacity: 0;
+}
+
+.cardInfo h3 {
+  font-size: 1.5rem;
+}
+
+.cardInfo p {
+  text-align: left;
+  color: #b7b7b7;
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+.skillHeadding {
+  color: black;
+  font-size: 1.2rem;
+  padding-bottom: 10px
+}
+
+.skillList {
+
+  color: black;
+  font-size: 1rem;
+}
+
+.topSing {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.topSing>span {
+  font-size: .7rem;
+  font-weight: 700;
+  margin-top: 3px;
+}
+
+.warper h2 {
+  font-weight: 900;
+  font-size: 2rem;
+  margin: 20px 0px;
+}
+
+.projectContainer {
+  display: flex;
+  width: 100%;
+  gap: 3%;
+  flex-wrap: wrap;
+  row-gap: 50px;
+  justify-content: center;
+}
+
+.FAQContainer {
+  flex-direction: row !important;
+  flex: 1;
+}
+
+
+.FAQRight {
+  flex: 1;
+  position: relative;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  min-width: 475px;
+  max-width: 600px;
+}
+
+.FAQRight>div:nth-child(1) {
+  margin: auto;
+  width: 85%;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: aliceblue;
+  box-shadow: 0px 0px 20px 0px #80808057;
+}
+
+.FAQRight>div:nth-child(2) {
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin: auto;
+}
+
+.FAQRight>div:nth-child(2)>div {
+  height: 110%;
+  background-color: #080d19;
+  margin: auto;
+  position: relative;
+  top: -10%;
+  transform: rotate(7deg);
+  width: min-content;
+  border-top-left-radius: 170px;
+  border-top-right-radius: 170px;
+}
+
+.why-choose-us {
+  flex-direction: row !important;
+  gap: 6%;
+  align-items: stretch !important;
+  flex-wrap: wrap;
+}
+
+.why-choose-us>div {
+  border: 2px solid #2a2a2a;
+  flex: 1;
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  align-items: flex-start !;
+  padding: 20px;
+  background-color: #08122a;
+  border-radius: 10px;
+}
+
+.why-choose-us>div>div {
+  width: 70px;
+  aspect-ratio: 1;
+  overflow: hidden;
+}
+
+.why-choose-us img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.why-choose-us h4 {
+  color: white;
+  text-align: left;
+  margin: 10px 0px;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.why-choose-us p {
+  color: white;
+  text-align: left;
+  font-size: 1rem;
+  font-weight: 500;
 }
