--- a/css/utility.css
+++ b/css/utility.css
@@ -1,25 +1,31 @@
-.btn {
-    border: 2px solid var(--main);
-    border-radius: 6px;
-    padding: 8px 20px;
-    font-weight: 600;
+.heading_text {
+    font-size: 3rem !important;
+    font-family: inter !important;
+    font-weight: 900 !important;
+}
+
+.warper {
+    max-width: 100vw;
+    width: 100%;
+    border-top: 1px solid gray;
+}
+
+.container {
+    max-width: 1200px;
+    margin: auto;
+    padding: 60px 0px;
+    width: 92%;
+}
+
+.text {
+    font-size: 1.1rem;
+    text-align: left;
+}
+
+.activeText {
+    z-index: 10;
+    position: relative;
     cursor: pointer;
-    transition: var(--transition);
-}
-
-.btn-fill,
-.btn-fill>* {
-    background-color: var(--main);
-    color: var(--black);
-}
-
-.btn-outline,
-.btn-outline>* {
-    background-color: transparent;
-    color: var(--main);
-
-}
-
-.btn:hover {
-    transform: scale(1.02);
+    color: white;
+    font-weight: 600;
 }
